<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.smartrplace.logging</groupId>
	<artifactId>fendodb-base</artifactId>
	<version>0.1.1-SNAPSHOT</version>
	<name>FendoDB timeseries database</name>
	<description>FendoDB is a timeseries database targeted at IoT device log data, used in particular with OGEMA</description>
	<packaging>pom</packaging>
	<url>http://smartrplace.de</url>

	<inceptionYear>2017</inceptionYear>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/smartrplace/fendodb.git</connection>
		<developerConnection>scm:git:git://github.com/smartrplace/fendodb.git</developerConnection>
		<url>https://github.com/smartrplace/fendodb</url>
		<tag>0.1.0</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<osgi.version>6.0.0</osgi.version>
		<ogema.api.version>2.2.0</ogema.api.version>
		<ogema.widgets.version>2.2.0</ogema.widgets.version>
		<slf4j.version>1.7.2</slf4j.version>
		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
		<!-- max versions exclusive -->
		<guava.version.min>19.0</guava.version.min>
		<guava.version.max>31.0</guava.version.max>
		<felix.service.command.version.min>0.0.0</felix.service.command.version.min>
		<felix.service.command.version.max>2.0.0</felix.service.command.version.max>
	</properties>
	<modules>
		<module>fendodb-admin-api</module>
		<module>fendodb-api</module>
		<module>fendodb-core</module>
		<module>fendodb-grafana</module>
		<module>fendodb-grafana-config</module>
		<module>fendodb-grafana-ogema-configs</module>
		<module>fendodb-grafana-server-configs</module>
		<module>fendodb-influx-connector</module>
		<module>fendodb-ogema-context</module>
		<module>fendodb-ogema-tagging</module>
		<module>fendodb-reader</module>
		<module>fendodb-recordeddata-wrapper</module>
		<module>fendodb-rest</module>
		<module>fendodb-source</module>
		<module>fendodb-tools</module>
		<module>fendodb-viz</module>
	</modules>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<extensions>true</extensions>
					<version>4.0.0</version>
					<executions>
						<execution>
							<id>bundle-manifest</id>
							<phase>generate-test-sources</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<compilerArgs>
							<arg>-Xlint</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
					<artifactId>maven-java-formatter-plugin</artifactId>
					<version>0.4</version>
					<configuration>
						<configFile>${format.file}</configFile>
						<encoding>UTF-8</encoding>
						<lineEnding>LF</lineEnding>
						<excludes>
							<exclude>**/src/test/**</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>format</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
				</plugin>

				<!-- Plugin for automatic addition of header to java, html, jsp, .. files. -->
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<!-- see 'mvn com.mycila:license-maven-plugin:help -Ddetail=true' -->
						<header>header.txt</header>
						<keywords> <!-- existing license headers contain all of these keywords -->
							<keyword>Smartrplace</keyword>
							<keyword>Apache</keyword>
							<keyword>License</keyword>
						</keywords>
						<properties>
							<year>2018</year>
							<email>info@smartrplace.de</email>
						</properties>
						<encoding>UTF-8</encoding>

						<includes>
							<include>src/**</include>
							<include>web/**</include>
						</includes>
						<excludes>
							<exclude>target/**</exclude>
							<exclude>**/*.txt</exclude>
							<exclude>**/data/**</exclude>
							<exclude>**/MANIFEST.MF</exclude>
							<exclude>**/.project</exclude>
							<exclude>**/.settings</exclude>
							<exclude>**/.classpath</exclude>
						</excludes>
						<useDefaultExcludes>true</useDefaultExcludes>
						<strictCheck>true</strictCheck>
						<failIfMissing>true</failIfMissing>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>format</goal>
							</goals>
							<!-- don't execute this plugin automatically -> need to be invoked
								explicitly: mvn license:[goal] [goal] := check, format or remove -->
							<phase>validate</phase>
						</execution>
					</executions>
				</plugin>

				<!-- Source Plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- Javadoc Plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
				         <additionalparam>-Xdoclint:none</additionalparam>
				         <additionalOptions>-Xdoclint:none</additionalOptions>
				      </configuration>
				</plugin>
	            <plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.6</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19.1</version>
					<configuration>
						<argLine>-ea</argLine>
					</configuration>
				</plugin>
				<!-- Release Plugin -->
				<!-- Usage: 1. mvn release:prepare -Prelease-prepare 2. mvn release:perform
					-Dgoals'deploy -f src/pom.xml' NOTE: unfortunately the attribute pomFileName
					is ignored in mvn 3.0.5 and/or release-plugin version 2.5.1 so using profile
					-Prelease-perform isn't working yet ... alternatively (with dryRun): mvn
					release:prepare -Prelease-prepare -DdryRun=true mvn release:clean -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- OSGi -->
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.core</artifactId>
				<version>${osgi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.cmpn</artifactId>
				<version>${osgi.version}</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<!-- OGEMA API -->
			<dependency>
				<groupId>org.ogema.core</groupId>
				<artifactId>api</artifactId>
				<version>${ogema.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.core</groupId>
				<artifactId>models</artifactId>
				<version>${ogema.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.ref-impl</groupId>
				<artifactId>internal-api</artifactId>
				<version>${ogema.api.version}</version>
			</dependency>
			<!-- OGEMA Tools and Services -->
			<dependency>
				<groupId>org.ogema.tools</groupId>
				<artifactId>resource-utils</artifactId>
				<version>${ogema.api.version}</version>
			</dependency>

			<!-- OGEMA widget framework -->
			<dependency>
				<groupId>org.ogema.widgets</groupId>
				<artifactId>ogema-gui-api</artifactId>
				<version>${ogema.widgets.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.widgets</groupId>
				<artifactId>ogema-js-bundle</artifactId>
				<version>${ogema.widgets.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.widgets</groupId>
				<artifactId>widget-collection</artifactId>
				<version>${ogema.widgets.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.widgets</groupId>
				<artifactId>widget-extended</artifactId>
				<version>${ogema.widgets.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ogema.widgets</groupId>
				<artifactId>widget-experimental</artifactId>
				<version>${ogema.widgets.version}</version>
			</dependency>

			<!-- Others -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>23.0</version>
			</dependency>

			<dependency>
				<groupId>org.smartrplace.logging</groupId>
				<artifactId>fendodb-api</artifactId>
				<version>0.1.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.smartrplace.logging</groupId>
				<artifactId>fendodb-tools</artifactId>
				<version>0.1.1-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
	<!-- Sign and deploy locally, for testing. Usage: mvn -Psign install -DskipTests 
			-o -->
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- Generate source, javadoc, sign and deploy. Usage: 
				mvn -Psign-and-deploy deploy -DskipTests -Dadditionalparam=-Xdoclint:none -->
			<id>sign-and-deploy</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
